Create more .h .cpp pairs for types of functions
The single helper.h file was getting crowded so I split it up into
several different categories and update the solvers and makefile
accordingly.

Partially addresses issue #2

--- a/solver/Makefile
+++ b/solver/Makefile
@@ -7,29 +7,31 @@ cppPerf = g++ -std=c++17 -O3
 cppCompiler = ${cppDebug} #the version used
 
 # list of binaries to clean as well
-binaries = advection.exe
+binaries = advection.exe burgers.exe
 
-Advect_SRC = 2nd-Order-linear-advection.cpp helper.cpp
-Advect_OJB = $(Advect_SRC:.cpp = .o)
-
-Burgers_SRC = burgers-solver.cpp helper.cpp
-Burgers_OJB = $(Burgers_SRC:.cpp = .o)
-
+Helper_SRC = helper.cpp initial-conditions.cpp interface.cpp limiters.cpp
+Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 
 all:
 	@echo "This does nothing. See Makefile"
 
-advection: $(Advect_OBJ)
-	$(cppCompiler) $(Advect_SRC) -o advection.exe $(Advect_OBJ)
+# To switch between compiling the whole program every time and only compiling
+# what has changed simply replace NAME.cpp with NAME.o and $(Helper_SRC) with
+# $(Helper_OBJ). This will generate a lot of object files though
+advection: advection-solver.cpp $(Helper_SRC)
+	$(cppCompiler) $? -o $@.exe
 
-burgers: $(Burgers_OBJ)
-	$(cppCompiler) $(Burgers_SRC) -o burgers.exe $(Burgers_OBJ)
+burgers: burgers-solver.cpp $(Helper_SRC)
+	$(cppCompiler) $? -o $@.exe
+
+%.o: %.cpp
+	$(cppCompiler) -c $<
 
 clean:
 	@echo "Cleaning up..."
 	@rm -f $(binaries)
 	@rm -f *.mod
-	@rm -f *o
+	@rm -f *.o
 	@rm -f *.exe
 	@rm -rf *.dSYM
 	@rm -f a.out
