Update the Grid1D/primitive struct
- Renamed the struct from `primitive` to `Grid1D` to better describe it
- Added member function to save arrays
- Added constructors for saveable and non-saveable instances of this
  struct
- Added destructor to close open files
- Fixed some logic errors in Momentum and Total Energy functions

Partially addresses issue #4

--- a/euler-solver/Makefile
+++ b/euler-solver/Makefile
@@ -1,5 +1,5 @@
 #.DEFAULT_GOAL := generate #choose the default goal instead of it being the first one
-.PHONY: all clean #tells make that these goals are not files but some other thing
+.PHONY: clean #tells make that these goals are not files but some other thing
 
 # compiler options, debug and performance
 cppDebug = g++ -std=c++17 -Wall -Wextra -Wpedantic
@@ -9,7 +9,7 @@ cppCompiler = ${cppDebug} #the version used
 # list of binaries to clean as well
 binaries = euler-solver.exe
 
-Helper_SRC = primitives.cpp
+Helper_SRC = Grid1D.cpp #Simulation1D.cpp
 Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 
 # To switch between compiling the whole program every time and only compiling
