Test RiemannSolver class & bug fixes
- Wrote a tester program for the RiemannSolver class. test-Riemann.cpp
- Many bug fixes for the Riemann Solver class
- Tweaked the euler plotter for better clarity

--- a/euler-solver/Makefile
+++ b/euler-solver/Makefile
@@ -7,7 +7,7 @@ cppPerf = g++ -std=c++17 -O3
 cppCompiler = ${cppDebug} #the version used
 
 # list of binaries to clean as well
-binaries = euler-solver.exe
+binaries = euler-solver.exe test-Riemann.exe
 
 Helper_SRC = Grid1D.cpp Simulation1D.cpp RiemannSolver.cpp
 Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
@@ -16,6 +16,10 @@ Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 # what has changed simply replace NAME.cpp with NAME.o and $(Helper_SRC) with
 # $(Helper_OBJ). This will generate a lot of object files though
 euler-solver: euler-main.cpp $(Helper_SRC)
+	$(cppCompiler) $? -o $@.exe
+
+test-Helper_SRC = RiemannSolver.cpp
+test-Riemann: test-Riemann.cpp $(test-Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
 %.o: %.cpp
