Add Simulation1D::setPrimatives to main function
Partially addresses issue #4

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
-            "program": "${workspaceRoot}/euler-solver/test-Riemann.exe",
+            "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
+            // "program": "${workspaceRoot}/euler-solver/test-Riemann.exe",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
