--- a/euler-solver/Makefile
+++ b/euler-solver/Makefile
@@ -17,7 +17,7 @@ cppCompiler = ${cppDebug} #the version used
 # list of binaries to clean as well
 binaries = euler-solver.exe test-Riemann.exe
 
-Helper_SRC = Grid1D.cpp Simulation1D.cpp RiemannSolver.cpp
+Helper_SRC = Grid1D.cpp Simulation1D.cpp ExactRiemannSolver.cpp
 Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 
 # To switch between compiling the whole program every time and only compiling
@@ -26,7 +26,7 @@ Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 euler-solver: euler-main.cpp $(Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
-test-Helper_SRC = RiemannSolver.cpp
+test-Helper_SRC = ExactRiemannSolver.cpp
 test-Riemann: test-Riemann.cpp $(test-Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
