Replace < with <= in pressure estimate

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            // "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
-            "program": "${workspaceRoot}/euler-solver/test-Riemann.exe",
+            "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
+            // "program": "${workspaceRoot}/euler-solver/test-Riemann.exe",
             "args": [],
-            "stopAtEntry": true,
+            "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
