Add tracking of total conserved variables Add linestyle option to euler plotter Change number of cells in test-Riemann to match euler-main comment out unused stuff for PLM

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
             // "program": "${workspaceRoot}/euler-solver/test-Riemann.exe",
             "args": [],
-            "stopAtEntry": false,
+            "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
