Major refactor to compute fluxes more accurately
This is a major refactor of the code. The previous version computed
each flux twice which can lead to numerical instability since you're
not using the exact same flux. The new version only computes each flux
once, computes interface states more efficiently, along with other
improvements listed below.

- Remove the ability to create instances of the Grid1D class that
  can't save themselves
- Standardized doing the left side first then the right.
- Standardized naming conventions
- In Simulation1D, call the Riemann solver in a loop on cell centers
  instead of one cell at a time
- Implement new conservative update
- Rename `HydroHelper` to `HydroUtilities`
- Add the different reconstruction options.  Now the interfaceStates
  function chooses between calling piecewise constant and piecewise
  linear reconstruction function functions
- Bug: there was a negative sign and some parenthesis wrong in
  ExactRiemannSolver::_computePressureStar
- Add new Gaussian advection initial conditions
- New PLM implementations copied for Pyro2
  https://github.com/python-hydro/pyro2/blob/main/compressible/interface.py
- Add compile time choosing of limiter kind
- Add STL container bound checking to Make routine
- Bug: The slopes shouldn't have a deltaX because it screws with the
  units and it gets canceled out later anyway
- Have simulations start at step 1 instead of 0. Zero is for initial
  conditions
- Update doxygen documentation

euler-solver-plotter.py
- Add new debug config for current python scripts
- Update run-euler-solver.sh to take an FPS argument to pass to
  euler-solver-plotter.py
- Refactor euler-solver-plotter.py
  - More robust and accurate method to compute stride. Previously the
    conversion to int was resulting in low strides that didn't cover
    the entire simulation time series
  - Now accepts the frame rate as an option command line argument,
    defaults to 24 fps
  - Cleared out old code
  - Moved time step

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "Advec",
         "Advect",
         "Eigens",
+        "Vhat",
+        "arange",
         "diaph",
         "dynload",
         "loadtxt",
@@ -60,6 +62,7 @@
         "compare": "cpp",
         "complex": "cpp",
         "concepts": "cpp",
-        "ranges": "cpp"
+        "ranges": "cpp",
+        "*.txt": "cpp"
     }
 }
