--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "euler-solver debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/euler-solver/euler-solver.exe",
@@ -29,6 +29,14 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "name": "Python: Current File",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "cwd": "${fileDirname}",
+            "console": "integratedTerminal"
         }
     ]
 }
