Make euler-main.cpp use the new PerfTimer class
Resolves #12

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,6 +63,7 @@
         "complex": "cpp",
         "concepts": "cpp",
         "ranges": "cpp",
-        "*.txt": "cpp"
+        "*.txt": "cpp",
+        "iomanip": "cpp"
     }
 }
