Create an Euler solver using a Van Leer integrator
My eventual goal is to implement the VL+CT algorithm in Stone &
Gardiner 2009 so I need a VL (Van Leer) powered hydro code. I
converted my 1D CTU (Corner Transport Upwind) integrator into a Van
Leer integrator that should translate easily to MHD and 3D. The old
CTU code is in `Euler1D-CTU` and the new Van Leer code is in
`Euler1D-VL`. Other changes to accommodate this and other changes are
detailed below:

- Moved `euler-solver` directory to `euler1D-CTU`
- Moved Doxyfile to be inside `euler1D-CTU` since I will have different
  documentation sets for each solver. This will let me have multiple
  objects with the same name in different solvers.
- Add a new header markdown file for this solver
- running `make clean` now deletes generated doxygen HTML files
- Update the `run-euler-solver.sh` script to account for the name change
- Copy most of the contents of `euler1D-CTU` to `euler1D-VL` which will
  become the home of the new euler solver using a Van Leer integrator.
- Update Grid1D class to allow grids that can't save to files
- Add a struct for grids of primitive variables
- Add a grid for storing the half time step values
- Allow conservative update to work on either grid
  This will allow the Simulation1D::conservativeUpdate member function to
  update either the real grid or the half time step grid
- Update interfaceStates to work with VL algorithm
  Added the ability to indicate if it was the first or second
  reconstruction to the Simulation1D::interfaceStates function
- Update Simulation1D::_piecewiseConstantReconstruction and
  Simulation1D::piecewiseLinearReconstruction to accept the grid to use
  as arguments
- Update euler-main to use the Van-Leer algorithm
- Update debugger options for new directory config
- Lower the Courant number to 0.4 from 0.8, needed for 3D
- Increase number of cells to 1,000 instead of 100
- Format the eigenvector computations
- Replace PLM algorithm in Van Leer integrator
  - The

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,6 +64,7 @@
         "concepts": "cpp",
         "ranges": "cpp",
         "*.txt": "cpp",
-        "iomanip": "cpp"
+        "iomanip": "cpp",
+        "cstring": "cpp"
     }
 }
