Implement an HLLC Riemann Solver
- Implement the HLLC Riemann solver from Batten et al. 1997
- Implement Strategy design pattern to choose Riemann Solver
  https://sourcemaking.com/design_patterns/strategy
  - This is done by using a (mostly) virtual base class and deriving
    each Riemann solver from it then choosing which one to use in the
    constructor for Simulation1D.
- Make the x/t argument optional for all Riemann solvers. It now
  defaults to 0.0
- Fix bug where the grid had an insufficient number of ghost cells
- Add a new debug profile for debugging a.out
- Convert the raw pointers used in Simulation1D::conservativeUpdate to
  STL unique_ptr's

Closes #10

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
+
         {
             "name": "euler-solver debug",
             "type": "cppdbg",
@@ -12,6 +14,31 @@
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "/ihome/eschneider/rvc9/dotfiles/crc_h2p/bin/gdb-run.sh",
+            "setupCommands": [
+                {
+                    "description": "Make STL containers readable",
+                    "text": "python import sys; sys.path.insert(0, '/ihome/eschneider/rvc9/.gdb-debug-python'); from libstdcxx.v6.printers import register_libstdcxx_printers;register_libstdcxx_printers(None)",
+                    "ignoreFailures": false
+                },
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "C++: a.out",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/euler1D-VL/a.out",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
