Allow the HLLC solver to take a x/t argument
- Includes the position/time argument for the HLLC solver. This lets
  the HLLC solver sort of be tested on its own, though the results
  aren't terrible accurate due to the reduced number of waves

--- a/euler1D-VL/Makefile
+++ b/euler1D-VL/Makefile
@@ -26,8 +26,9 @@ Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 euler-solver: euler-main.cpp $(Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
-test-Helper_SRC = ExactRiemannSolver.cpp
-test-Riemann: test-Riemann.cpp $(test-Helper_SRC)
+
+test-Helper_SRC = ExactRiemannSolver.cpp HllcRiemannSolver.cpp Grid1D.cpp
+riemannTester: riemannTester.cpp $(test-Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
 %.o: %.cpp
