Add more groundwork for HLLD solver

--- a/mhd1D/Makefile
+++ b/mhd1D/Makefile
@@ -17,7 +17,7 @@ cppCompiler = ${cppDebug} #the version used
 # list of binaries to clean as well
 binaries = euler-solver.exe test-Riemann.exe
 
-Helper_SRC = Grid1D.cpp Simulation1D.cpp HllcRiemannSolver.cpp
+Helper_SRC = Grid1D.cpp Simulation1D.cpp HlldRiemannSolver.cpp
 Helper_OBJ = $(Helper_SRC:%.cpp=%.o)
 
 # To switch between compiling the whole program every time and only compiling
@@ -27,7 +27,7 @@ mhd-solver: mhd-main.cpp $(Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
 
-test-Helper_SRC = HllcRiemannSolver.cpp Grid1D.cpp
+test-Helper_SRC = HlldRiemannSolver.cpp Grid1D.cpp
 riemannTester: riemannTester.cpp $(test-Helper_SRC)
 	$(cppCompiler) $? -o $@.exe
 
