--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,12 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "HLLD Tester debug",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/mhd1D/mhd-solver.exe",
+            "program": "${workspaceFolder}/mhd1D/riemannTester.exe",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
