Add function for computing the slope used in CT calculations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,8 @@
         "dynload",
         "loadtxt",
         "pyplot",
-        "timeit"
+        "timeit",
+        "upwinded"
     ],
     "files.associations": {
         "nanorc": "bat",
