Clear up conservative update calculations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "diaph",
         "dynload",
         "loadtxt",
+        "modulos",
         "pyplot",
         "timeit",
         "upwinded"
