--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,37 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "mhd-solver debug",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/mhd1D/mhd-solver.exe",
+            "args": [],
+            "stopAtEntry": true,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "/ihome/eschneider/rvc9/dotfiles/crc_h2p/bin/gdb-run.sh",
+            "setupCommands": [
+                {
+                    "description": "Make STL containers readable",
+                    "text": "python import sys; sys.path.insert(0, '/ihome/eschneider/rvc9/.gdb-debug-python'); from libstdcxx.v6.printers import register_libstdcxx_printers;register_libstdcxx_printers(None)",
+                    "ignoreFailures": false
+                },
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "euler-vl-solver debug",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Euler1D-VL/euler-solver.exe",
             "args": [],
             "stopAtEntry": true,
             "cwd": "${workspaceFolder}",
