--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Files specific to this repo #
 ##############################
-test.cpp
+experiment.cpp
 temp.py
-test.h
+experiment.h
 *.csv
 doxygen-*
 #Athena-Code/*
