corrected working directory name

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,7 +13,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./app
+        working-directory: ./tests
 
     steps:
     - uses: actions/checkout@v2
