fixed address typo

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -40,7 +40,7 @@ else ifneq (,$(findstring summit.olcf.ornl.gov,$(HOST)))
     # We're on Summit
 	GTEST_ROOT = OLCF_GOOGLETEST_ROOT
 	LIBNAME = lib64
-else ifneq (,$(findstring summit.olcf.ornl.gov,$(HOST)))
+else ifneq (,$(findstring internal.cloudapp.net,$(HOST)))
     # We're on Gihub
 	GTEST_ROOT = /usr/
 	LIBNAME = lib
