--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,5 +21,5 @@ jobs:
     - uses: actions/checkout@v1
     - name: make
       run: make
-#    - name: run test
-#      run: ./Tests.exe
+    - name: run test
+      run: ./Tests.exe
