refactor workflow into single job

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -8,20 +8,7 @@ on:
 
 jobs:
 ################################################################################
-  build_euler1D-VL:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./euler1D-VL
-
-    steps:
-    - uses: actions/checkout@v1
-    - name: make
-      run: make
-################################################################################
-  build_tests:
-    needs: build_euler1D-VL
+  Build-and-test:
     runs-on: ubuntu-latest
 
     defaults:
@@ -29,23 +16,14 @@ jobs:
         working-directory: ./tests
 
     steps:
+    - uses: actions/checkout@v1
     - name: Install gtest
       uses: MarkusJx/googletest-installer@v1.1
-    - uses: actions/checkout@v1
-    - name: make
+    - name: build euler1D-VL
+      working-directory: ./euler1D-VL/
       run: make
-################################################################################
-  run_tests:
-    needs: [build_euler1D-VL, build_tests]
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./tests
-        
-    steps:
-    - name: show files
-      run: echo "what up?"
-    - name: run test
+    - name: Build tests
+      run: make
+    - name: Run tests
       run: ./Tests.exe
 ################################################################################
